--- a/views/goals.html
+++ b/views/goals.html
@@ -28,8 +28,7 @@
 						<tr>
 							<th>Goal</th>
 							<th>Due Date</th>
-							<th>Completed</th>
-							<th>Delete</th>
+							<th>Completed</th>							
 						</tr>
 					</thead>
 					<tbody>
@@ -52,7 +51,10 @@
 									ng-click="completeGoal(goal)">
 							</td>							
 							<td>
-								<button type="button" class="btn btn-danger" ng-click="deleteGoal(goal, $index)">Delete</button>
+								<button type="button" class="btn btn-danger" ng-click="deleteGoal(goal, $index)"> <i class="fa fa-trash-o"></i> </button>
+							</td>
+							<td>
+								<button type="button" class="btn btn-success" ng-click="pushToTodo(goal)"> <i class="fa fa-chevron-right"></i><i class="fa fa-chevron-right"></i> </button>
 							</td>
 						</tr>
 					</tbody>
