--- a/views/todos.html
+++ b/views/todos.html
@@ -1,4 +1,13 @@
 
+<div class="row">
+    <div ng-controller="datesController">
+    	<div class="col-xs-5"></div>
+    	<div class="col-xs-6">
+   	    	<h1><< {{ tomorrow }} >></h1>
+   	    </div>
+    </div>
+</div>
+
 <div ng-controller="todosController">
 	<br>
 	<div class="row">	
