--- a/views/todos.html
+++ b/views/todos.html
@@ -1,19 +1,33 @@
-
+<!-- 
 <div class="row">
     <div ng-controller="datesController">
-    	<div class="col-xs-5"></div>
-    	<div class="col-xs-6">
-   	    	<h1><< {{ tomorrow }} >></h1>
+    	<div class="col-xs-4"></div>
+    	<div class="col-xs-8">
+   	    	<h2>
+   	    		<span ng-click="decrementDate()"><<</span>
+   	    	    {{ current_position }} 
+   	    	 	<span ng-click="incrementDate()">>></span>
+   	    	 </h2>
    	    </div>
     </div>
 </div>
-
+ -->
 <div ng-controller="todosController">
+
+	<div class="col-xs-4"></div>
+	<div class="col-xs-8">
+    	<h2>
+    		<span ng-click="decrementDate()"><<</span>
+    	    {{ current_position }} 
+    	 	<span ng-click="incrementDate()">>></span>
+    	 </h2>
+   	</div>
+ 
 	<br>
 	<div class="row">	
 		<div class="col-xs-3"></div>
 		<div class="col-xs-9">
-			<h1>Todos <small ng-if="remaining()"> ({{ remaining() }}/{{todos.length}})</small></h1>
+			<h2>Todos <small ng-if="remaining()"> ({{ remaining() }}/{{todos.length}})</small></h2>
 		</div>
 	</div>
 	
