--- a/views/todos.html
+++ b/views/todos.html
@@ -1,91 +1,78 @@
-<!-- 
-<div class="row">
-    <div ng-controller="datesController">
-    	<div class="col-xs-4"></div>
-    	<div class="col-xs-8">
-   	    	<h2>
-   	    		<span ng-click="decrementDate()"><<</span>
-   	    	    {{ current_position }} 
-   	    	 	<span ng-click="incrementDate()">>></span>
-   	    	 </h2>
-   	    </div>
-    </div>
-</div>
- -->
+
 <div ng-controller="todosController">
 
-	<div class="col-xs-4"></div>
-	<div class="col-xs-8">
-    	<h2>
-    		<span ng-click="decrementDate()"><<</span>
-    	    {{ current_position }} 
-    	 	<span ng-click="incrementDate()">>></span>
-    	 </h2>
-   	</div>
- 
-	<br>
-	<div class="row">	
-		<div class="col-xs-3"></div>
-		<div class="col-xs-9">
-			<h2>Todos <small ng-if="remaining()"> ({{ remaining() }}/{{todos.length}})</small></h2>
-		</div>
-	</div>
-	
-	<br><br>
-	
-	<div class="row">		
-		<div class="col-xs-3"></div>
-  		<div class="col-xs-2">
-  			<div class="form-group">	    	
-	    		<input type="text" ng-model="search" class="form-control" placeholder="Search">
-	  		</div>  			
-  		</div>
+	<div class="row">
+		<div class="col-xs-4"></div>
+		<div class="col-xs-1">
+	    	<span ng-click="decrementDate()"><i class="fa fa-chevron-left fa-2x"></i></span>
+	    </div>
+	    <div class="col-xs-2">	
+	    	<!-- <button class="btn btn-primary" ng-click="decrementDate()"><i class="fa fa-backward"></i></button> -->
+	    <!-- </div>
+	    <div class="col-xs-2"> -->
+	    	<h3 style="display: inline">{{   current_position_fancy   }}</h3>
+	    </div>
+	    <div class="col-xs-5">
+	    <!-- </div>
+	   	<div class="col-xs-5"> -->
+	   		<span ng-click="incrementDate()">&nbsp;&nbsp;<i class="fa fa-chevron-right fa-2x"></i> </span>			
+	    	<!-- <button class="btn btn-primary" ng-click="incrementDate()"><i class="fa fa-forward"></i></button>    	  -->
+	   	</div>
 	</div>
 
+	<br>
+ 
 	<div class="row">
 		<div class="col-xs-3"></div>
 		<div class="col-xs-6">
-			<div class="table-responsive">
-				<table width="100%" class="table table-striped table-condensed">
-					<thead>
-						<tr>							
-							<th>Title</th>
-							<th>Date</th>
-							<th>Pushed Times</th>
-							<th>Date Completed</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="todo in todos | filter:search">
-							<td editable-text="todo.title"
-								onbeforesave="checkTitle($data)"
-								onaftersave="updateGoal(todo)">
-							    {{ todo.title }}
-							</td>							
-							<td editable-date="todo.date"
-								onbeforesave="checkDueDate($data)"
-								onaftersave="updateGoal(todo)">
-								{{ todo.date }}
-							</td>
-							<td editable-number="todo.pushed_times"
-								onbeforesave="checkDueDate($data)"
-								onaftersave="updateGoal(todo)">
-								{{ todo.pushed_times }}
-							</td>
-							<td editable-date="todo.date_completed"
-								onbeforesave="checkDueDate($data)"
-								onaftersave="updateGoal(todo)">
-								{{ todo.date_completed }}
-							</td>				
-							<td>
-								<button type="button" class="btn btn-danger" ng-click="deleteGoal(todo, $index)"> <i class="fa fa-trash-o"></i> </button>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
+			<span ng-hide="todos.length > 0">
+				<br>
+				<strong>No todos for the day, try adding some!</strong>
+			</span>
+			<span ng-show="todos.length > 0">
+				<div class="table-responsive">
+					<table class="table table-striped table-condensed">
+						<thead>
+							<tr>	
+								<th class="col-sm-1"></th>						
+								<th class="col-sm-7"></th>																													
+								<th class="col-sm-1"></th>		
+								<th class="col-sm-1"></th>
+								<th class="col-sm-1"></th>	
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="todo in todos | filter:search">
+								<td>
+									<span class="btn btn-danger" ng-click="deleteTodo(todo)"> <i class="fa fa-trash-o"></i> </span>
+								</td>
+								<td editable-text="todo.title"
+									onbeforesave="checkTitle($data)"
+									onaftersave="updateTodo(todo)">
+								    <strong>{{ todo.title }}</strong>
+								</td>																		
+								<td>
+									<span class="badge">{{ todo.pushed_times }}</span>		
+								</td>
+								<td>																				
+									<span ng-switch on="todo.completed">
+										<span ng-switch-when="1" ng-click="completeTodo(todo)"><i class="fa fa-check-square-o fa-2x"></i> </span>								
+										<span ng-switch-default ng-click="completeTodo(todo)"><i class="fa fa-square-o fa-2x"></i> </span>
+									</span>	
+								</td>
+								<td>
+									<span ng-switch on="todo.completed">
+										<span ng-switch-when="1" style="color:gray"><i class="fa fa-chevron-right fa-2x"></i></span>
+										<span ng-switch-default ng-click="pushTodo(todo)"><i class="fa fa-chevron-right fa-2x"></i></span>									
+									</span>																														
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</span>
 		</div>
-		<div class="col-xs-3"></div>
+		<div class="col-xs-2"></div>
 	</div>
 
 	<br>
@@ -96,12 +83,8 @@
 			<form class="form-inline" role="form" ng-submit="addTodo()">
 				<div class="form-group">
 					<!-- <label for="goal_title">Goal Title</label> -->
-				    <input type="text" class="form-control" id="todo_title" ng-model="new_todo_title" placeholder="Enter Goal">
-				</div>
-				<!-- <div class="form-group">
-				   <label for="goal_due_date">Due Date</label>
-				    <input type="text" class="form-control" id="goal_due_date" ng-model="new_goal_due_date" placeholder="2014-03-23">
-				</div> -->
+				    <input type="text" class="form-control" id="todo_title" ng-model="new_todo_title" placeholder="New Todo">
+				</div>				
 				<div class="form-group">					
 					<button type="submit" class="btn btn-default">Submit</button>
 				</div>
