Removed all the trial and error crap with comments, returned it to working order. Branching here to attempt the overhaul with.

--- a/views/todos.html
+++ b/views/todos.html
@@ -1,5 +1,5 @@
 
-<div ng-controller="goalsWeeklyController">
+<!-- <div ng-controller="goalsWeeklyController">
 
 	<div class="row">
 		<div class="col-xs-4"></div>
@@ -38,10 +38,10 @@
 						<td>
 							<span ng-click="pushToTodo(goal)"><i class="fa fa-caret-square-o-right"></i></span>
 						</td>
-					<!-- 	<td>
+						<td>
 							<span>{{ goal_weekly.completed }} / {{ goal_weekly.total }}</span>
-						</td> -->
-						<!-- <td>
+						</td>
+						<td>
 							<span ng-repeat="todo in goal">
 								<span>{{ todo }}</span> -->
 								<!-- <span ng-switch="todo.completed">
@@ -54,15 +54,14 @@
 								</span> -->
 						<!-- 	</span>
 						</td> -->
-					</tr>
+				<!-- 	</tr>
 				</tbody>
 			</table>
 
 		</div>
 	</div>
 
-</div>
-
+</div> -->
 
 <div ng-controller="todosController">
 
@@ -84,7 +83,7 @@
 	<div class="row">
 		<div class="col-xs-3"></div>
 		<div class="col-xs-6">
-			<span ng-click="add()">click</span>
+			<!-- <span ng-click="add()">click</span> -->
 			<span ng-hide="todos.length > 0">
 				<br>
 				<strong>No todos for the day, try adding some!</strong>
