Got everything working well. drastically cleaned up todos_controller, moved all logic to the service. starting to work on goals for the same thing. Got visuals for when a goal has completed all actionables.

--- a/views/goals.html
+++ b/views/goals.html
@@ -58,12 +58,13 @@
 							<td>
 							{{ goal.pushed }}
 							</td>
-							<td>								
-								<input type="checkbox" 
+							<td>
+							{{ goal.completed }}								
+								<!-- <input type="checkbox" 
 									ng-true-value="1" 
 									ng-false-value="0" 
 									ng-checked="goal.completed" 																	
-									ng-click="updateCompleted(goal)">
+									ng-click="updateCompleted(goal)"> -->
 							</td>							
 							<td>
 								<button type="button" class="btn btn-danger" ng-click="deleteGoal(goal, $index)"> <i class="fa fa-trash-o"></i> </button>
