--- a/views/todos.html
+++ b/views/todos.html
@@ -2,9 +2,9 @@
 <div ng-controller="goalsPushedController">
 
 	<div class="row">
-		<div class="col-xs-4"></div>
-		<div class="col-xs-3">	
-		<h4>Weekly Goals</h4>
+		<div class="col-xs-3"></div>
+		<div class="col-xs-5">	
+			<h4>Weekly Goals</h4>
 			<table class="table table-condensed">
 				<tbody>
 					<tr ng-repeat="goal in goals_pushed">	
@@ -30,13 +30,24 @@
 						
 						<!-- Shows a button to create a todo if not complete, otherwise a check box that's unclickable -->						
 						<td>
-							<span ng-show="goal.actionable_completed < goal.actionable_total" ng-click="createTodoFromGoal(goal)"><i class="fa fa-caret-square-o-down"></i></span>
-							<span ng-show="goal.actionable_completed >= goal.actionable_total"><i class="fa fa-check-square"></i></span>
-						</td>				
+							<span ng-show="goal.actionable_completed < goal.actionable_total" ng-click="createTodoFromGoal(goal)">
+								<i class="fa fa-caret-square-o-down"></i>
+							</span>
+							<span ng-show="goal.actionable_completed >= goal.actionable_total">
+								<i class="fa fa-check-square"></i>
+							</span>
+						</td>	
+
+						<!-- <td>
+							<div class="progress">
+							  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="{{ goal.actionable_total}}" style="width: 60%;">
+							    <span class="sr-only">60% Complete</span>
+							  </div>
+							</div>
+						</td> -->			
 					</tr>
 				</tbody>
 			</table>
-
 		</div>
 	</div>
 
@@ -45,23 +56,34 @@
 <div ng-controller="todosController">
 
 	<div class="row">
-		<div class="col-xs-4"></div>
-		<div class="col-xs-1">
-	    	<span ng-click="decrementDate()"><i class="fa fa-chevron-left fa-2x"></i></span>
+		<div class="col-xs-3"></div>
+	    <div class="col-xs-3">	
+	    	<h2 style="display: inline">{{ current_position_fancy['month'] }}.</h2>
+	    	<h2 style="display: inline">{{ current_position_fancy['date'] }}</h2>
 	    </div>
-	    <div class="col-xs-2">	
-	    	<h3 style="display: inline">{{   current_position_fancy   }}</h3>
-	    </div>
-	    <div class="col-xs-5">
-	   		<span ng-click="incrementDate()">&nbsp;&nbsp;<i class="fa fa-chevron-right fa-2x"></i> </span>			
-	   	</div>
-	</div>
+	    <div class="col-xs-2">
+    		<span class="btn btn-default btn-block" ng-click="decrementDate()">
+    			<i class="fa fa-chevron-left fa-3x"></i>
+    		</span>
+    	</div>
+    </div>
+    <div class="row">
+    	<div class="col-xs-3"></div>
+    	<div class="col-xs-3">
+    		<h1 style="display: inline; font-size:3em">{{ current_position_fancy['day'] }}</h1>
+    	</div>
+    	<div class="col-xs-2">
+    		<span class="btn btn-default btn-block" ng-click="incrementDate()">
+    			<i class="fa fa-chevron-right fa-3x"></i>
+    		</span>
+   		</div>
+    </div>
 
 	<br>
  
 	<div class="row">
 		<div class="col-xs-3"></div>
-		<div class="col-xs-6">			
+		<div class="col-xs-5">			
 			<span ng-hide="todos.length > 0">
 				<br>
 				<strong>No todos for the day, try adding some!</strong>
@@ -79,7 +101,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr ng-repeat="todo in todos | filter:search">
+							<tr ng-repeat="todo in todos | filter:search | orderBy:'completed'">
 								<td>
 									<span class="btn btn-danger" ng-click="deleteTodo(todo)"> <i class="fa fa-trash-o"></i> </span>
 								</td>
@@ -126,7 +148,7 @@
 				</div>
 			</span>
 		</div>
-		<div class="col-xs-2"></div>
+		<div class="col-xs-1"></div>
 	</div>
 
 	<br>
@@ -146,6 +168,7 @@
 		</div>
 		<div class="col-xs-3"></div>
 	</div>
+</div>
 
 	<br>
 
