--- a/views/login.html
+++ b/views/login.html
@@ -1,15 +1,12 @@
 
 <div ng-controller="usersController"> 
-	<br><br>
+	<br><br><br><br><br><br>
 	<div class="row">
 		<div class="col-xs-3"></div>
 	    <div class="col-xs-6">
-		    <h2>Login Form</h2>
+		    <h2>MoleSkin</h2>
 		    <form class="form-horizontal" ng-submit="login()">
 		    	<fieldset>
-			      	<!-- Form Name -->
-			      	<legend><h3>Have an account? Sign In</h3></legend>
-
 			      	<!-- Text input-->
 			      	<div class="form-group">
 			        	<label class="col-md-1 control-label" for="email"></label>  
@@ -33,7 +30,7 @@
 				        	<button id="login" name="login" class="btn btn-block btn-success"><i class="fa fa-user"></i> Login</button>
 				        </div>
 				        <div class="col-md-4">
-				        	<button id="forpass" name="forpass" class="btn btn-block btn-warning"><i class="fa fa-pencil"></i> Sign Up</button>
+				        	<button id="forpass" ng-click="requestInvite()" name="forpass" class="btn btn-block btn-warning"><i class="fa fa-pencil"></i> Request Invite</button>
 				        </div>  
 				    </div>
 		    	</fieldset>
