--- a/views/changelog.html
+++ b/views/changelog.html
@@ -4,13 +4,17 @@
 	<div class="col-xs-6">
 
 		<h2>Change log</h2>
+		<br>
 
-		<div>
+		<b>4/16</b><br>
+		 Restructed directories, deleted unused css/js files. Added Alertify & ui-bootstrap vendors. Setup a requests invite button. Updated the goals datepicker, works but disabled till I can enforce formatting. Alertify on all requests to help with debugging and easier understanding of what's going on. Abstracted out the todo->goal completed interaction a bit, fixed the + and - possible completed goals bug. Made all vendor files local. Formatted views a bit.
+		
+		<br><br>
 
 		<b>4/15</b><br>
 		Changed theme. Added nav, included changelog page. Todos now show a symbol to show when they are from a current goal. 
-		</div>
 
+		</div>
 	</div>
 	<div class="col-xs-3"></div>
 </div>
