Removed old <i> tags, hopefully breaking the goal push page

--- a/views/goals.html
+++ b/views/goals.html
@@ -73,10 +73,10 @@
 									<i class="fa fa-check"></i>
 								</button>
 								<button ng-if="!goal.completed && goal.pushed" ng-if="goal.pushed" type="button" class="btn btn-success" ng-click="pushGoal(goal)">
-									</i><i class="fa fa-chevron-left"></i>
+									<i class="fa fa-chevron-left"></i>
 								</button>	
 								<button ng-if="!goal.completed && !goal.pushed" type="button" class="btn btn-success" ng-click="pushGoal(goal)">
-									</i><i class="fa fa-chevron-right"></i>
+									<i class="fa fa-chevron-right"></i>
 								</button>							
 							</td>
 						</tr>
