Fixed the goals date picker

--- a/views/changelog.html
+++ b/views/changelog.html
@@ -7,6 +7,11 @@
 		<br>
 
 		<b>4/16</b><br>
+
+		 Fixed the date picker on the goals page. 
+
+		<br><br>
+
 		 Restructed directories, deleted unused css/js files. Added Alertify & ui-bootstrap vendors. Setup a requests invite button. Updated the goals datepicker, works but disabled till I can enforce formatting. Alertify on all requests to help with debugging and easier understanding of what's going on. Abstracted out the todo->goal completed interaction a bit, fixed the + and - possible completed goals bug. Made all vendor files local. Formatted views a bit.
 		
 		<br><br>
