--- a/views/goals.html
+++ b/views/goals.html
@@ -103,7 +103,7 @@
 				    <input type="text" class="form-control" id="new_goal_actionable_total" ng-model="new_goal_actionable_total" placeholder="Times to complete">
 				</div>
 				<div class="form-group">					   				       
-	                <input disabled="disabled"
+	                <input 
 	                	   type="text" 
 	                	   id="goal_due_date" 
 	                	   ng-model="new_goal_due_date" 
@@ -114,7 +114,7 @@
 	              		   min="minDate" 
 	              		   max="'2017-06-22'" 
 	              		   date-disabled="disabled(date, mode)" 
-	              		   ng-required="true" 
+	              		   ng-required="false" 
 	              		   close-text="Close" />				            				          			       
 				</div>		
 				<br><br>							
