--- a/views/changelog.html
+++ b/views/changelog.html
@@ -8,7 +8,7 @@
 
 		<b>4/16</b><br>
 
-		 Fixed the date picker on the goals page. Had to update users table with a reminder_token column for a laravel update. Requiring Wiped DB. Fixed logout issue.
+		 Fixed the date picker on the goals page. Had to update users table with a reminder_token column for a laravel update. Requiring Wiped DB. Fixed logout issue. Fixed the Goals actions bug. 
 
 		<br><br>
 
