--- a/views/changelog.html
+++ b/views/changelog.html
@@ -3,8 +3,14 @@
 	<div class="col-xs-3"></div>
 	<div class="col-xs-6">
 
-		<h2>Change log</h2>
+		<h2>Change log</h2>		
 		<br>
+
+		<b>4/17</b><br>
+
+		 Removed Pushed and Completed columns from Goals page.
+
+		 <br><br>
 
 		<b>4/16</b><br>
 
