--- a/views/changelog.html
+++ b/views/changelog.html
@@ -6,6 +6,12 @@
 		<h2>Change log</h2>		
 		<br>
 
+		<b>4/22</b><br>
+
+		 Goals will now establish a start of week and end of week date when pushing a goal to the current week list. It's now querying only goals for the current week. Needs to adjust the goals in the list when viewing dates outside of the week scope (Mon - Sun)
+
+		 <br><br>
+
 		<b>4/17</b><br>
 
 		 Removed Pushed and Completed columns from Goals page.
