Moving to github

--- a/views/changelog.html
+++ b/views/changelog.html
@@ -3,6 +3,11 @@
 	<div class="col-xs-3"></div>
 	<div class="col-xs-6">
 
+		<h2>Currently Known Bugs</h2>
+		<br>
+
+		* Pushing todos is not incrementing the number, instead just appending a 1 to it. This is only happening online...
+
 		<h2>Change log</h2>		
 		<br>
 
